--- a/webclient/app/index.html
+++ b/webclient/app/index.html
@@ -33,7 +33,7 @@
           <span class="icon-bar"></span>
         </button>
 
-        <a class="navbar-brand" href="#/">client</a>
+        <a class="navbar-brand" href="#/">Agri Tech</a>
       </div>
       <div class="collapse navbar-collapse" id="js-navbar-collapse" ng-controller="MenuCtrl">
 
@@ -69,7 +69,7 @@
 
 <div class="footer">
   <div class="container">
-    <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+    <p><span class="glyphicon glyphicon-heart"></span> Copyright 2015</p>
   </div>
 </div>
 
@@ -112,6 +112,8 @@
 <script src="scripts/controllers/login.js"></script>
 <script src="scripts/controllers/addpost.js"></script>
 <script src="scripts/controllers/viewpost.js"></script>
+<script src="scripts/controllers/websocket.js"></script>
+<script src="scripts/services/websocket.js"></script>
 <!-- endbuild -->
 </body>
 </html>
